log
Thu 05 Oct 2023 12:42:53 PM UTC: 
 tests:  0|5
total_score: 0/70
4cf2248
Thu 05 Oct 2023 12:51:33 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:27: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   62 |                     Node* adj_node = copy(n);
      |                           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0cac50e
Thu 05 Oct 2023 12:52:40 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:27: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   62 |                     Node* adj_node = copy(n);
      |                           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ac35eb7
Thu 05 Oct 2023 12:53:08 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
610974a
Thu 05 Oct 2023 12:54:11 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
8cb114c
Thu 05 Oct 2023 12:58:55 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:9: error: unused variable ‘submatrix_check’ [-Werror=unused-variable]
   49 |     int submatrix_check[9][10] = {0}; // Arreglo para verificar las submatrices.
      |         ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
362bc28
Thu 05 Oct 2023 01:00:02 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 15/70
a65dd60
Thu 05 Oct 2023 01:00:27 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ae5b5e3
Thu 05 Oct 2023 01:04:18 PM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  2|4
total_score: 15/70
fa766d5
Thu 05 Oct 2023 01:05:27 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
0a65379
Thu 05 Oct 2023 01:06:37 PM UTC: 
 sudoku.c | 37 +------------------------------------
 1 file changed, 1 insertion(+), 36 deletions(-)
 tests:  5|3
total_score: 35/70
1a36d61
Sun 08 Oct 2023 10:14:28 PM UTC: 
 sudoku.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
16ef1be
Sun 08 Oct 2023 10:24:48 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
304ba74
Sun 08 Oct 2023 10:27:40 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|3
total_score: 35/70
23ad115
Sun 08 Oct 2023 10:29:11 PM UTC: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
e1b5dfa
Sun 08 Oct 2023 10:32:36 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
bf09ec7
Sun 08 Oct 2023 10:33:10 PM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
c448384
Sun 08 Oct 2023 10:33:28 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
fa6c6eb
Sun 08 Oct 2023 10:37:19 PM UTC: 
 sudoku.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:164:1: error: control reaches end of non-void function [-Werror=return-type]
  164 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
70c58f4
Sun 08 Oct 2023 10:37:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
c2d2954
Sun 08 Oct 2023 10:49:18 PM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++--
 1 file changed, 39 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:210:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  210 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
f23e366
Sun 08 Oct 2023 11:01:24 PM UTC: 
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:210:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  210 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
b1218fa
Sun 08 Oct 2023 11:08:53 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c:221:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  221 | Compile: `gcc sudoku -o sudoku`
      |        ^
sudoku.c:221:10: error: stray ‘`’ in program
  221 | Compile: `gcc sudoku -o sudoku`
      |          ^
sudoku.c:221:31: error: stray ‘`’ in program
  221 | Compile: `gcc sudoku -o sudoku`
      |                               ^
sudoku.c:222:6: error: stray ‘`’ in program
  222 | run: `./sudoku`
      |      ^
sudoku.c:222:15: error: stray ‘`’ in program
  222 | run: `./sudoku`
      |               ^
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:209:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  209 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
c4ddcb5
Sun 08 Oct 2023 11:09:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c:221:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  221 | Compile: `gcc sudoku -o sudoku`;
      |        ^
sudoku.c:221:10: error: stray ‘`’ in program
  221 | Compile: `gcc sudoku -o sudoku`;
      |          ^
sudoku.c:221:31: error: stray ‘`’ in program
  221 | Compile: `gcc sudoku -o sudoku`;
      |                               ^
sudoku.c:222:4: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  222 | run: `./sudoku`;
      |    ^
sudoku.c:222:6: error: stray ‘`’ in program
  222 | run: `./sudoku`;
      |      ^
sudoku.c:222:15: error: stray ‘`’ in program
  222 | run: `./sudoku`;
      |               ^
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:209:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  209 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
9490adc
Sun 08 Oct 2023 11:36:40 PM UTC: 
 sudoku.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 55/70
98bc796
Sun 08 Oct 2023 11:49:30 PM UTC: 
 sudoku.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
 tests:  0|0
ad62313
Mon 09 Oct 2023 12:33:10 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:252:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  252 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
8d5d8a8
